--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 
 # SITE SPECIFIC: The following fields are typically changed for each site
 name: EE160-Fall23
-baseurl: /Template
+baseurl: /EE160
 morea_theme: spacelab
 timezone: Pacific/Honolulu
 morea_navbar_items:
